네이버 메일 인증 설정 추가 및 style.css 수정(헤더부분)

--- a/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
@@ -551,21 +551,22 @@ body {
     font-weight: bold;
 }
 
-.container .fixed_box .header .upper .login .dropdown .dropbtn {
+.container>.fixed_box>.header>.upper>.login>.dropdown>.dropbtn {
   background-color: #ea2129;
   color: white;
   padding: 1px;
   font-size: 16px;
   border: none;
+  margin-bottom: 2px;
 }
 
-.container .fixed_box .header .upper .login .dropdown {
+.container>.fixed_box>.header>.upper>.login>.dropdown {
   position: relative;
   display: inline-block;
   left: 88%;
 }
 
-.container .fixed_box .header .upper .login .dropdown .dropdown-content {
+.container>.fixed_box>.header>.upper>.login>.dropdown>.dropdown-content {
   display: none;
   position: absolute;
   /* background-color: #f1f1f1;
@@ -584,7 +585,7 @@ body {
     min-width: 184px;
 }
 
-.container .fixed_box .header .upper .login .dropdown .dropdown-content .member_menu {
+.container>.fixed_box>.header>.upper>.login>.dropdown>.dropdown-content>.dropdown-form>a:nth-child(4) {
   color: black;
   padding: 7% 0;
   text-decoration: none;
@@ -592,7 +593,14 @@ body {
   font-family: 'Noto Sans CJK', AppleSDGothicNeo, 'Malgun Gothic', arial;
 }
 
-.container .fixed_box .header .upper .login .dropdown .dropdown-content .member_login {
+.container>.fixed_box>.header>.upper>.login>.dropdown>.dropdown-content>.dropdown-form>a:nth-child(5) {
+  color: black;
+  /* padding: 12px 57px; */
+  text-decoration: none;
+  display: block;
+  font-family: 'Noto Sans CJK', AppleSDGothicNeo, 'Malgun Gothic', arial;
+}
+.container>.fixed_box>.header>.upper>.login>.dropdown>.dropdown-content>a:nth-child(1) {
   color: black;
   /* padding: 12px 57px; */
   text-decoration: none;
@@ -600,14 +608,17 @@ body {
   font-family: 'Noto Sans CJK', AppleSDGothicNeo, 'Malgun Gothic', arial;
 }
 
-.container .fixed_box .header .upper .login .dropdown .dropdown-content p:nth-child(1) {
+.container>.fixed_box>.header>.upper>.login>.dropdown>.dropdown-content>.dropdown-form>p:nth-child(1) {
   color: black;
   padding: 0 9%;
   text-decoration: none;
   display: block;
   font-family: 'Noto Sans CJK', AppleSDGothicNeo, 'Malgun Gothic', arial;
+      font-size: 14px;
+    line-height: 17px;
+    margin-bottom: -4px;
 }
-.container .fixed_box .header .upper .login .dropdown .dropdown-content p:nth-child(2) {
+.container>.fixed_box>.header>.upper>.login>.dropdown>.dropdown-content>.dropdown-form>p:nth-child(2) {
   color: black;
   padding: 0 9%;
   text-decoration: none;
@@ -615,16 +626,19 @@ body {
   font-family: 'Noto Sans CJK', AppleSDGothicNeo, 'Malgun Gothic', arial;
   font-size: 10px;
   margin-left: 24%;
+      line-height: 17px;
+    margin-bottom: 0;
 }
-.container .fixed_box .header .upper .login .dropdown .dropdown-content .img_login {
+/*
+.container>.fixed_box>.header>.upper>.login>.dropdown>.dropdown-content>.dropdown-form>.img_login {
 	color: black;
     padding: 0 16px;
     text-decoration: none;
     display: block;
     font-family: 'Noto Sans CJK', AppleSDGothicNeo, 'Malgun Gothic', arial;
     margin-bottom: -15%;
-}
-.container .fixed_box .header .upper .login .dropdown .dropdown-content .img_iconFirst {
+}*/
+.container>.fixed_box>.header>.upper>.login>.dropdown>.dropdown-content>.dropdown-form>p:nth-child(1)>img {
 	/* height: 40px;
     width: 40px;
     margin-left: 33px;
@@ -643,21 +657,33 @@ body {
     margin-top: -8%;
     margin-bottom: -15%;
 }
-.container .fixed_box .header .upper .login .dropdown .dropdown-content .img_iconFirst:hover {
+.container>.fixed_box>.header>.upper>.login>.dropdown>.dropdown-content>.dropdown-form>p:nth-child(1)>img:hover {
 	transform: rotate( 720deg );
 }
-.container .fixed_box .header .upper .login .dropdown .dropdown-content .img_iconSecond {
+.container>.fixed_box>.header>.upper>.login>.dropdown>.dropdown-content>.dropdown-form>a:nth-child(4)>img {
     width: 38%;
     transition: all ease 1s;
     margin-left: -2%;
     margin-top: -9%;
-    margin-bottom: -15%;
+    margin-bottom: -10%;
     position: relative;
+    vertical-align: unset;
 }
-.container .fixed_box .header .upper .login .dropdown .dropdown-content .img_iconSecond:hover {
+.container>.fixed_box>.header>.upper>.login>.dropdown>.dropdown-content>.dropdown-form>a:nth-child(4)>img:hover {
 	transform: rotate( 720deg );
 }
-.container .fixed_box .header .upper .login .dropdown .dropdown-content .img_iconThird {
+.container>.fixed_box>.header>.upper>.login>.dropdown>.dropdown-content>.dropdown-form>a:nth-child(5)>img {
+	width: 40%;
+    transition: all ease 1s;
+    margin-left: -3%;
+    margin-top: -2%;
+    margin-bottom: -3%;
+    position: relative;
+}
+.container>.fixed_box>.header>.upper>.login>.dropdown>.dropdown-content>.dropdown-form>a:nth-child(5)>img:hover {
+	transform: rotate( 720deg );
+}
+.container>.fixed_box>.header>.upper>.login>.dropdown>.dropdown-content>a:nth-child(1)>img {
     /* width: 70px;
     transition: all ease 1s;
     margin-left: -17%;
@@ -671,13 +697,18 @@ body {
     margin-bottom: -2%;
     position: relative;
 }
-.container .fixed_box .header .upper .login .dropdown .dropdown-content .img_iconThird:hover {
+.container>.fixed_box>.header>.upper>.login>.dropdown>.dropdown-content>a:nth-child(1)>img:hover {
 	transform: rotate( 720deg );
 }
-.container .fixed_box .header .upper .login .dropdown .dropdown-content .span_menu {
+.container>.fixed_box>.header>.upper>.login>.dropdown>.dropdown-content>.dropdown-form>a:nth-child(4)>span {
 	position: absolute;
     margin-top: 1%;
     margin-left: -4%;
+}
+.container>.fixed_box>.header>.upper>.login>.dropdown>.dropdown-content>.dropdown-form>a:nth-child(5)>span {
+	position: absolute;
+    margin-top: 8%;
+    margin-left: -6%;
 }
 .container .fixed_box .header .upper .login .dropdown .dropdown-content .span_login {
 	position: absolute;
