--- a/2. 개발/FreSearch/src/main/webapp/resources/css/info_find.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/info_find.css
@@ -195,6 +195,49 @@ body {
     margin-left: 6px;
     font-size: 12px;
 }
+
+/******************Modal******************/
+.modal  {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgb(0, 0, 0); 
+	background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal .modal-content {
+	background-color: #fefefe;
+	margin: 15% auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 40%;
+    height: 50%;
+}
+
+.modal .modal-content .modal-confirm {
+	cursor: pointer; 
+	background-color: #DDDDDD; 
+	text-align: center; 
+	padding-bottom: 10px; 
+	padding-top: 10px;
+}
+.modal .modal-content .modal-content-detail{
+	position: relative;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 27px 40px 0 40px;
+    border-bottom: 1px solid #e7e7e7;
+    margin-bottom: 16px;
+}
+
+.modal .modal-content .modal-confirm span{
+	font-size: 13pt;
+}
 @media screen and (max-width: 767px) {
 	.page-content {
 	    margin: 175px 20px;
