--- a/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
@@ -103,10 +103,14 @@ body {
 }
 
 .container .fixed_box .header .header_inner .logo img {
+    /*
     width: 200px;
     height: 45px;
     margin-top: 15px;
-    /* 임시 로고에 맞게 사이즈 조정 로고 확정 후 width, height 조정 혹은 이미지 크기가 정확하다면 항목 삭제 */
+     임시 로고에 맞게 사이즈 조정 로고 확정 후 width, height 조정 혹은 이미지 크기가 정확하다면 항목 삭제
+    */
+    width: 105px;
+    margin-top: 5px;
 }
 
 /* GNB Default loot
@@ -543,7 +547,7 @@ body {
 }
 
 #footer .footer_inner .footer_logo img {
-    width: 180px;
+    width: 105px;
 }
 
 #footer .footer_inner .footer_text p a {
