--- a/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
@@ -1133,7 +1133,7 @@ button, input {
 	box-sizing: border-box;
     max-width: 100%;
     min-width: 0%;
-    padding: 20px 32px 0 42px;
+    padding: 10px 32px 0 42px;
 }
 body{
 	background: #f4f4f4
@@ -1154,5 +1154,15 @@ body{
     font-size: 18px;
     color: #555e5e;
     background-color: rgb(208, 208, 208);
+}
+
+.img{
+	width: 180px;
+    max-height: 400px;
+    vertical-align: top;
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
