--- a/2. 개발/FreSearch/src/main/webapp/resources/css/research.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/research.css
@@ -198,7 +198,7 @@ select {
 	padding: .8em .5em; /* 여백으로 높이 설정 */ 
 	margin:15px;
 	font-family: inherit; /* 폰트 상속 */ 
-	background: url('/resources/img/arrow.png') no-repeat 95% 50%; /* 네이티브 화살표 대체 */ 
+	background: url('/resources/img/bicon11_4.png') no-repeat 95% 50%; /* 네이티브 화살표 대체 */ 
 	border: 1px solid #999; 
 	border-radius: 0px; /* iOS 둥근모서리 제거 */ 
 	-webkit-appearance: none; /* 네이티브 외형 감추기 */ 
