--- a/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
@@ -12,11 +12,21 @@ body {
     right: 0;
     top: 0;
     bottom: 0;
-    background:#1428a0;
+    background:#1428a0c9;
     color: #fff;
     font-size: 50px;
     z-index: 10000;
     /* 이 값으로 레이어의 위치를 조정합니다. */
+}
+.loading label{
+	position: absolute;
+    width: 500px;
+    height: 500px;
+    left: 50%;
+    top: 70%;
+    margin-left: -250px;
+    margin-top: -250px;
+    text-align:center;
 }
 
 .container .fixed_box {
