--- a/2. 개발/FreSearch/src/main/webapp/resources/css/info_find.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/info_find.css
@@ -57,13 +57,16 @@ body {
 	color: #333;
     padding-bottom: 13px;
 }
+.page-wrapper .page-content .page-form .email-form .email-msg .email-msg-first2 span {
+	color: #1428a0;
+}
 .page-wrapper .page-content .page-form .email-form .email-msg .email-msg-second {
 	font-size: 13px;
     line-height: 19px;
     color: #999;
 }
 .page-wrapper .page-content .page-form .email-form .email-msg .email-msg-second span:nth-child(1) {
-	color: #069fee;
+	color: #1428a0;
 }
 .page-wrapper .page-content .page-form .page-form-input label,
 .page-wrapper .page-content .page-form .form-row-birth label,
@@ -124,7 +127,8 @@ body {
     position: absolute;
 }
 .page-wrapper .page-content .page-form .page-form-input input[type=text],
-.page-wrapper .page-content .page-form .form-row input[type=text] {
+.page-wrapper .page-content .page-form .form-row input[type=text],
+.page-wrapper .page-content .page-form .form-row input[type=password] {
 	width: 100%;
 	padding : 10.5px 0px 10.5px 10px;
     /*padding: 10.5px 15px;*/
@@ -140,6 +144,7 @@ body {
 }
 .page-wrapper .page-content .page-form .page-form-input input[type=text]:focus,
 .page-wrapper .page-content .page-form .form-row input[type=text]:focus,
+.page-wrapper .page-content .page-form .form-row input[type=password]:focus,
 .page-wrapper .page-content .page-form .form-row-birth .mb_birth_yy input:focus,
 .page-wrapper .page-content .page-form .form-row-birth .mb_birth_mm select:focus,
 .page-wrapper .page-content .page-form .form-row-birth .mb_birth_dd input:focus  {
@@ -149,7 +154,8 @@ body {
 .page-wrapper .page-content .page-form .form-submit {
 	text-align: center;
 }
-.page-wrapper .page-content .page-form .form-submit .emailFind {
+.page-wrapper .page-content .page-form .form-submit .emailFind,
+.page-wrapper .page-content .page-form .form-submit .pwdFind {
 	font-size: 16px;
     color: #fff;
     background: #1428a0;
@@ -159,9 +165,22 @@ body {
     box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.2);
     border: none;
     /* margin: 26px 142px 0; */
-    cursor: initial;
-    opacity: 0.5;
+    cursor: pointer;
+    /* opacity: 0.5; */
     margin-top: 20px;
+}
+.page-wrapper .page-content .page-form .form-submit .pwdChange {
+	font-size: 16px;
+	color: #fff;
+	background: #1428a0;
+	border-radius: 5px;
+	width: 28%;
+    height: 45px;
+	box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.2);
+	border: none;
+	margin-top: 20px;
+	cursor: initial;
+	opacity: 0.5;
 }
 .page-wrapper .page-content .page-form .form-pwd-find {
 	position: relative;
@@ -217,18 +236,72 @@ body {
 
 .modal .modal-content {
 	background-color: #fefefe;
-	margin: 15% auto;
-	padding: 20px;
-	border: 1px solid #888;
-	width: 50%;
-    height: 65%;
+    margin: 13% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 540px;
+    height: 460px;
+    border-radius: 8px;
+}
+.modal .modal-content2 {
+	background-color: #fefefe;
+    margin: 13% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 540px;
+    height: 410px;
+    border-radius: 8px;
 }
 
-.modal .modal-content .modal-logo {
-	text-align: center;
+.modal .modal-content .modal-logo,
+.modal .modal-content2 .modal-logo {
+	margin: 0 40px;
+    border-bottom: 1px solid #d9d9d9;
+    padding-top: 20px;
+    padding-bottom: 15px;
+    font-size: 12px;
 }
+/*
+.modal .modal-content .modal-logo h2,
+.modal .modal-content2 .modal-logo h2 {
+	float: left;
+}*/
+.modal .modal-content .close:before,
+.modal .modal-content2 .close:before {
+	content: "×";
+}
+/* .modal .modal-content .close,
+.modal .modal-content2 .close {
+    float: right;
+    cursor: pointer;
+    color: #fff;
+    border: 1px solid #1428a0;
+    border-radius: 30px;
+    background: #1428a0;
+    font-size: 31px;
+    font-weight: bold;
+    display: inline-block;
+    line-height: 0px;
+    padding: 11px 3px;
+    outline: none;
+} */
 
-.modal .modal-content .modal-login {
+.modal .modal-content .close,
+.modal .modal-content2 .close {
+	float: right;
+    cursor: pointer;
+    color: #1428a0;
+    border: none;
+    background: #fff;
+    font-size: 31px;
+    font-weight: bold;
+    display: inline-block;
+    line-height: 0px;
+    padding: 11px 3px;
+    outline: none;	
+}
+.modal .modal-content .modal-login,
+.modal .modal-content2 .modal-login {
 	background-color: #1428a0;
     line-height: 34px;
     display: inline-block;
@@ -237,12 +310,14 @@ body {
     padding: 0px 28px;
     border-radius: 4px;
 }
-.modal .modal-content .modal-login .login_btn {
+.modal .modal-content .modal-login span,
+.modal .modal-content2 .modal-login span {
 	font-size: 14px;
     color: #fff;
     font-weight: bold;
 }
-.modal .modal-content .modal-password {
+.modal .modal-content .modal-password,
+.modal .modal-content2 .modal-password {
 	border: 1px solid #cecece;
     background-color: #fff;
     display: inline-block;
@@ -252,7 +327,8 @@ body {
     padding: 0px 28px;
     border-radius: 4px;
 }
-.modal .modal-content .modal-password .password_btn {
+.modal .modal-content .modal-password span,
+.modal .modal-content2 .modal-password span {
 	font-size: 14px;
     color: #666;
     font-weight: bold;
@@ -260,16 +336,119 @@ body {
     text-align: center;
     cursor: pointer;
 }
-.modal .modal-content .modal-content-detail{
+
+/* .modal .modal-content .modal-content-detail {
 	position: relative;
-    margin: 0 auto;
+    margin: 0px 40px -17px;
+    background-color: #fff;
+    border-bottom: 1px solid #e7e7e7;
+    text-align: center;
+} */
+.modal .modal-content .modal-button,
+.modal .modal-content2 .modal-button {
+	text-align: center;
+    padding-top: 38px;
+}
+.modal .modal-content .modal-content-detail,
+.modal .modal-content2 .modal-content-detail{
+	position: relative;
+    margin: 0 25px;
     background-color: #fff;
     padding: 27px 40px 0 40px;
     border-bottom: 1px solid #e7e7e7;
     margin-bottom: 16px;
+    text-align: center;
 }
-
-.modal .modal-content .modal-confirm span{
+.modal .modal-content .modal-content-detail .email-logo-img,
+.modal .modal-content2 .modal-content-detail .email-logo-img {
+	width: 260px;
+    height: 97px;
+    margin: 0 auto;
+}
+.modal .modal-content .modal-content-detail .email-logo-img img,
+.modal .modal-content2 .modal-content-detail .email-logo-img img {
+	width: 100%;
+    height: auto;
+}
+.modal .modal-content .modal-content-detail .email-msg,
+.modal .modal-content2 .modal-content-detail .email-msg {
+	padding-top: 28px;
+    text-align: center;
+    font-size: 16px;
+    padding-bottom: 28px;
+}
+.modal .modal-content .modal-content-detail .email-msg .email-msg-first,
+.modal .modal-content2 .modal-content-detail .email-msg .email-msg-first {
+	color: #333;
+	padding-bottom: 4px;
+    /* padding-bottom: 13px; */
+}
+.modal .modal-content .modal-content-detail .email-msg .email-msg-first span:nth-child(2),
+.modal .modal-content2 .modal-content-detail .email-msg .email-msg-first span:nth-child(2) {
+	color: #1428a0;
+}
+.modal .modal-content .modal-content-detail .email-msg .email-msg-second,
+.modal .modal-content2 .modal-content-detail .email-msg .email-msg-second {
+	/* font-size: 13px;
+    line-height: 19px;
+    color: #999; */
+    padding-bottom: 0px;
+}
+.modal .modal-content .modal-user,
+.modal .modal-content2 .modal-user {
+	border-bottom: 1px solid #e7e7e7;
+    margin: 41px 40px -5px 40px;
+}
+.modal .modal-content .modal-user .modal-user-email,
+.modal .modal-content2 .modal-user .modal-user-email {
+	float: left;
+    margin-top: -33px;
+}
+.modal .modal-content .modal-user .modal-user-email span,
+.modal .modal-content2 .modal-user .modal-user-email span {
+	padding-left: 14px;
+    font-size: 14px;
+}
+.modal .modal-content .modal-user .modal-user-regdate,
+.modal .modal-content2 .modal-user .modal-user-regdate {
+	margin-top: -28px;
+    float: left;
+    padding-left: 310px;
+}
+.modal .modal-content .modal-user .modal-user-regdate span,
+.modal .modal-content2 .modal-user .modal-user-regdate span {
+	text-align: right;
+    color: #999;
+    font-size: 12px;
+}
+/*
+.modal .modal-content .modal-content-detail .email-msg .email-msg-second span:nth-child(2) {
+	color: #069fee;
+}*/
+.modal .modal-content .modal-form .modal-form-submit,
+.modal .modal-content2 .modal-form .modal-form-submit {
+	padding-top: 10px;
+}
+.modal .modal-content .modal-form .modal-form-submit .modal-confirm,
+.modal .modal-content2 .modal-form .modal-form-submit .modal-confirm {
+	text-align: center;
+}
+.modal .modal-content .modal-form .modal-form-submit .modal-confirm .findConfirm,
+.modal .modal-content2 .modal-form .modal-form-submit .modal-confirm .findConfirm {
+	background-color: #1428a0;
+    line-height: 34px;
+    display: inline-block;
+    cursor: pointer;
+    height: 36px;
+    padding: 0px 28px;
+    border-radius: 4px;
+    font-size: 14px;
+    color: #fff;
+    font-weight: bold;
+    border: none;
+}
+.modal .modal-content .modal-confirm span,
+.modal .modal-content2 .modal-confirm span {
 	font-size: 13pt;
 }
 @media screen and (max-width: 767px) {
