--- a/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
@@ -16,9 +16,10 @@ body {
     font-size: 50px;
     z-index: 10000;
     /* 이 값으로 레이어의 위치를 조정합니다. */
+}
 .loading label{
 	position: absolute;
-    width: 500px;
+    width: 500px; 
     height: 500px;
     left: 50%;
     top: 70%;
