--- a/2. 개발/FreSearch/src/main/webapp/resources/css/research_list.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/research_list.css
@@ -13,8 +13,12 @@ body {
 .page-content .list-content {
 	width: 850px;
 }
+.page-content .list-content .detail-list {
+	min-height: 484px;
+}
 .page-content .list-content .detail-list .tab-content #test{
 	padding-top: 15px;
+	/* width: 846px; */
 }
 .page-content .list-content .detail-list .tab-content #test ul {
     float: left;
@@ -64,14 +68,21 @@ body {
 }
 
 .page-content .list-content .detail-list .tab-content #test ul li a .ctgr_img p{
-    z-index: 100;
+    /* z-index: 100;
     position: absolute;
     color: #222;
-    /*font-size: 16px;*/
     font-size: 14px;
     font-weight: bold;
     right: 10px;
-    padding-top: 5px;
+    padding-top: 5px; */
+    z-index: 100;
+    position: absolute;
+    color: #222;
+    /* font-size: 16px; */
+    font-size: 14px;
+    font-weight: 550;
+    right: 10px;
+    padding-top: 15px;
 }
 /*
 .page-content .list-content .detail-list .tab-content #test ul li a .ctgr_img p{
@@ -98,15 +109,22 @@ body {
 .page-content .list-content .detail-list .tab-content #test ul:hover img{
 	filter: brightness(70%);
 }
-.page-content .list-content .detail-list .tab-content #test ul li a span:nth-child(2) { 
-    display: block;
+.page-content .list-content .detail-list .tab-content #test ul li a .ctgr_nm { 
+    /* display: block;
     padding-top: 5px;
     padding-left: 20px;
     font-size: 20px;
     font-weight: 700;
-    color: #222;
+    color: #222; */
+    
+    display: block;
+    padding-top: 15px;
+    padding-left: 10px;
+    font-size: 14px;
+    font-weight: 550;
+    color: #1428a0;
 }
-.page-content .list-content .detail-list .tab-content #test ul li a .subj_nm span { 
+.page-content .list-content .detail-list .tab-content #test ul li a .subj_nm .subj_span { 
 	/*
 	display: block;
     padding-left: 20px;
@@ -116,7 +134,7 @@ body {
     overflow: hidden;
     text-overflow: ellipsis;
     width: 392px;*/
-    padding-left: 20px;
+    /* padding-left: 20px;
     padding-right: 20px;
     padding-top: 2px;
     line-height: 1.6;
@@ -125,12 +143,30 @@ body {
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     height: 50px;
+    font-size: 16px; */
+    
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 9px;
+    line-height: 1.6;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    height: 32px;
     font-size: 16px;
+    font-weight: 700;
 }
 .page-content .list-content .detail-list .tab-content #test ul li a span:nth-child(4) { 
-	display: block;
+	/* display: block;
     padding-left: 20px;
     padding-top: 2px;
+    font-size: 14px;
+    color: #222; */
+    
+    display: block;
+    padding-left: 112px;
+    padding-top: 14px;
     font-size: 14px;
     color: #222;
 }
@@ -305,4 +341,62 @@ body {
 }*/
 
 
+.subj_nm { 
+	position: relative; 
+	display: inline-block; 
+} 
+
+.tt-text { 
+	/* visibility: hidden; 
+	width: 200px; 
+	background-color: Indigo; 
+	color: Yellow; 
+	text-align: center; 
+	border-radius: 10px; 
+	padding: 10px 5px; 
+	position: absolute; 
+	z-index: 1; 
+	top: 200%; 
+	left: 50%; 
+	margin-left: -105px;  */
+	
+	visibility: hidden;
+    width: 256px;
+    height: auto;
+    background-color: #fff;
+    color: #222;
+    text-align: center;
+    border-radius: 10px;
+    padding: 10px 5px;
+    position: absolute;
+    z-index: 1;
+    top: 146%;
+    left: 40%;
+    margin-left: -105px;
+    font-size: 12px;
+} 
+
+.tt-text::after { 
+	/* content: ""; 
+	position: absolute; 
+	bottom: 100%; 
+	left: 50%; 
+	margin-left: -10px; 
+	border-width: 10px; 
+	border-style: solid; 
+	border-color: transparent transparent Indigo transparent;  */
+	
+	content: "";
+    position: absolute;
+    bottom: 100%;
+    left: 13%;
+    margin-left: -10px;
+    border-width: 6px;
+    border-style: solid;
+    border-color: transparent transparent #222 transparent;
+} 
+
+.research_list:hover .tt-text { 
+	visibility: visible; 
+}
 
