--- a/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
@@ -875,6 +875,7 @@ body {
   border-radius: 4px;
   box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.2), 0 0 1px 0 rgba(0, 0, 0, 0.2);
   background-color: #fff;
+  margin-top: 4px;
   font-size: 14px;
   min-width: 184px;
 }
