--- a/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
@@ -1009,7 +1009,7 @@ button, input {
 .Content>.Row>.Cell-Top{
 	border-top: none;
     font: 400 13px Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
-    color: #555e5e;
+    color: black;
     background-color: #FFFFFF;
     vertical-align: middle;
     padding-top: 0;
@@ -1151,9 +1151,21 @@ body{
 }
 
 .Content>.Row>.Cell-Oven {
-    font-size: 18px;
+    font-size: 14px;
     color: #555e5e;
-    background-color: rgb(208, 208, 208);
+    padding: 11px;
+    background-color: rgb(230, 241, 240);
+    border: none; 
+    color: black;
+}
+
+.Content>.Row>.Cell {
+    font-size: 14px;
+    color: #555e5e;
+    padding: 11px;
+    background-color: rgb(251, 251, 251);;
+    border: none; 
+    color: black;
 }
 
 .img{
