--- a/2. 개발/FreSearch/src/main/webapp/resources/css/signup_success.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/signup_success.css
@@ -6,3 +6,103 @@ body {
    	font-size: 16px;
 }
 
+.page-content {
+	padding-top: 150px;
+	display: flex;
+    justify-content: center;
+}
+
+.page-content>.list-content {
+	width: 850px;
+    text-align: center;
+    margin-top: 16px;
+}
+
+.page-content>.list-content>.detail-list {
+	min-height: 383px;
+}
+
+/* .page-content>.list-content>.detail-list>.confirm_img {
+	
+} */
+
+.page-content>.list-content>.detail-list>.confirm_img img{
+	width: 120px;
+}
+
+.page-content>.list-content>.detail-list>.confirm_msg {
+	margin-top: 20px;
+}
+.page-content>.list-content>.detail-list>.confirm_msg>span:nth-child(1){
+    margin-bottom: 15px;
+    font-size: 30px;
+    color: #666;
+    width: 238px;
+    float: left;
+    margin-left: 173px;
+    margin-right: -10px;
+}
+.page-content>.list-content>.detail-list>.confirm_msg>span:nth-child(2){
+	margin-bottom: 15px;
+    font-size: 30px;
+    width: 238px;
+    float: left;
+    margin-left: -89px;
+    margin-right: -30px;
+    color: #1428a0;
+}
+.page-content>.list-content>.detail-list>.confirm_msg>span:nth-child(3){
+    margin-bottom: 16px;
+    font-size: 30px;
+    color: #666;
+    width: 238px;
+    float: left;
+    margin-left: -86px;
+}
+.page-content>.list-content>.detail-list>.confirm_msg>span:nth-child(4){
+	font-size: 16px;
+    color: #666;
+    display: inline-block;
+    font-weight: 600;
+}
+.page-content>.list-content>.detail-list>hr{
+	width: 70%;
+    margin-left: 121px;
+    margin-top: 30px;
+    border: 1.2px solid #1428a0;
+}
+
+.page-content>.list-content>.detail-list>.confirm_button {
+	
+}
+.page-content>.list-content>.detail-list>.confirm_button>span:nth-child(1)>a {
+	color: #888;
+    position: absolute;
+    margin-top: 27px;
+    margin-left: -199px;
+    /* background: #1428a0; */
+    width: 176px;
+    height: 58px;
+    text-align: center;
+    padding-top: 18px;
+    cursor: pointer;
+    border: 1px solid #888;
+    font-size: 14px;
+    font-weight: 600;
+}
+.page-content>.list-content>.detail-list>.confirm_button>span:nth-child(2)>a {
+	color: #fff;
+    position: absolute;
+    margin-top: 27px;
+    margin-left: -1px;
+    background: #1428a0;
+    width: 176px;
+    height: 58px;
+    text-align: center;
+    padding-top: 18px;
+    cursor: pointer;
+    border: 1px solid #1428a0;
+    font-size: 14px;
+    font-weight: 600;
+}
+
