--- a/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
@@ -151,10 +151,11 @@
 }
 
 .card-body-mini{
-		padding: 1.5rem 1.875rem;
+	padding: 1.5rem 1.875rem;
 	margin-left: 0rem;
 	margin-right: auto;
 	width: 360px;
+	height: 260px;
 	
 }
 
@@ -331,6 +332,10 @@ body {
 	vertical-align: middle;
 	text-align: center;
 	margin-left: 36px;
+	
+}
+.btn-group {
+	padding-bottom: 10px;
 }
 
 
@@ -391,6 +396,12 @@ body {
 	justify-content: stretch;
 	box-shadow : 0px 0px 8px;
 }*/
+
+
+.table th{
+		
+	border-top: none !important;
+}
 
 .p{
 	width:100%;
