--- a/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
@@ -885,10 +885,9 @@ li>a {
     display: block;
     position: absolute;
     right: 0;
-    top:0;
+    bottom: 0;
     margin-right: 6px;
     margin-bottom: 6px;
-    margin-top: 20px;
 }
 html {
     font-family: Helvetica,Arial,Malgun Gothic,sans-serif;
@@ -1048,6 +1047,7 @@ button, input {
 	position : relative;
 	background: #f2f2f2;
 	padding-bottom: 70px;
+	min-height: 880px;
 }
 
 .google-1{
