이메일 재전송 페이지 업로드

--- a/2. 개발/FreSearch/src/main/webapp/resources/css/signin.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/signin.css
@@ -12,7 +12,10 @@ body {
 }
 .page-wrapper .page-logo {
 	position: absolute; 
-	margin-top: 32px;
+	margin-top: 41px;
+}
+.page-wrapper .page-logo a img{
+	width: 340px;
 }
 .page-wrapper .page-content{
 	background: #fff;
