--- a/2. 개발/FreSearch/src/main/webapp/resources/css/info_find.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/info_find.css
@@ -11,15 +11,30 @@ body {
 	justify-content: center;
 	margin-top: 2%;
 }
+.page-wrapper-confirm {
+	background: #f4f4f4;
+    display: flex;
+    justify-content: center;
+    margin-top: 4%;
+}
 .page-wrapper .page-logo {
 	position: absolute; 
-	margin-top: 9px;
+	margin-top: 19px;
+}
+.page-wrapper .page-logo a img{
+	width: 340px;
 }
 .page-wrapper .page-content{
 	background: #fff;
 	width: 600px;
 	border-radius: 8px;
 	margin: 116px 0;
+}
+.page-wrapper-confirm .page-content-confirm{
+	background: #fff;
+    width: 600px;
+    border-radius: 8px;
+    margin: 132px 0;
 }
 .page-wrapper .page-content .page-form{
 	padding: 30px 45px 55px 45px;
@@ -53,20 +68,28 @@ body {
     font-size: 16px;
     padding-bottom: 28px;
 }
-.page-wrapper .page-content .page-form .email-form .email-msg .email-msg-first {
+.page-wrapper .page-content .page-form .email-form .email-msg .email-msg-first,
+.page-wrapper .page-content .page-form .email-form .email-msg .email-confirm-first {
 	color: #333;
     padding-bottom: 13px;
+}
+.page-wrapper .page-content .page-form .email-form .email-msg .email-confirm-first span:nth-child(2) {
+	color: #1428a0;
 }
 .page-wrapper .page-content .page-form .email-form .email-msg .email-msg-first2 span {
 	color: #1428a0;
 }
-.page-wrapper .page-content .page-form .email-form .email-msg .email-msg-second {
+.page-wrapper .page-content .page-form .email-form .email-msg .email-msg-second,
+.page-wrapper .page-content .page-form .email-form .email-msg .email-confirm-second {
 	font-size: 13px;
     line-height: 19px;
     color: #999;
 }
 .page-wrapper .page-content .page-form .email-form .email-msg .email-msg-second span:nth-child(1) {
 	color: #1428a0;
+}
+.page-wrapper .page-content .page-form .email-form .email-msg .email-confirm-second span:nth-child(1) {
+	color: #999;
 }
 .page-wrapper .page-content .page-form .page-form-input label,
 .page-wrapper .page-content .page-form .form-row-birth label,
@@ -137,8 +160,7 @@ body {
     transition: all 0.1s;
     position: absolute;
 }
-.page-wrapper .page-content .page-form input::placeholder
- {
+.page-wrapper .page-content .page-form input::placeholder {
 	color: #999;
 	font-size: 12px;
 }
@@ -154,8 +176,22 @@ body {
 .page-wrapper .page-content .page-form .form-submit {
 	text-align: center;
 }
-.page-wrapper .page-content .page-form .form-submit .emailFind,
-.page-wrapper .page-content .page-form .form-submit .pwdFind {
+.page-wrapper .page-content .page-form .form-submit .emailFind {
+	font-size: 16px;
+    color: #fff;
+    background: #1428a0;
+    border-radius: 5px;
+    width: 28%;
+    height: 45px;
+    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.2);
+    border: none;
+    /* margin: 26px 142px 0; */
+    opacity: 0.5;
+    margin-top: 20px;
+}
+.page-wrapper .page-content .page-form .form-submit .pwdFind,
+.page-wrapper .page-content .page-form .form-submit .emailConfirm,
+.page-wrapper .page-content .page-form .form-submit .emailReSend {
 	font-size: 16px;
     color: #fff;
     background: #1428a0;
