--- a/2. 개발/FreSearch/src/main/webapp/resources/css/research_list.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/research_list.css
@@ -372,7 +372,7 @@ body {
     position: absolute;
     z-index: 1;
     top: 146%;
-    left: 47%;
+    left: 132px;
     margin-left: -105px;
     font-size: 12px;
     word-break: break-all;
