--- a/2. 개발/FreSearch/src/main/webapp/resources/css/signup.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/signup.css
@@ -15,13 +15,13 @@ body {
     margin-top: 40px;
 }
 .page-content a img {
-	width: 340px;
+	width: 300px;
 }
 .form-content {
 	background: #fff;
 	width: 670px;
 	border-radius: 8px;
-	margin: 138px 0;
+	margin: 138px 0 80px;
 }
 .form-detail {
 	padding: 30px 45px 30px 45px;
