--- a/2. 개발/FreSearch/src/main/webapp/resources/css/signup_success.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/signup_success.css
@@ -10,21 +10,22 @@ body {
 	padding-top: 150px;
 	display: flex;
     justify-content: center;
+    min-height: 880px;
 }
 
 .page-content>.list-content {
 	width: 850px;
     text-align: center;
-    margin-top: 16px;
+    margin-top: 120px;
 }
 
 .page-content>.list-content>.detail-list {
-	min-height: 383px;
+	/* min-height: 383px; */
 }
 
-/* .page-content>.list-content>.detail-list>.confirm_img {
-	
-} */
+.page-content>.list-content>.detail-list>.confirm_img {
+	padding-bottom: 13px;
+} 
 
 .page-content>.list-content>.detail-list>.confirm_img img{
 	width: 120px;
@@ -47,7 +48,7 @@ body {
     font-size: 30px;
     width: 238px;
     float: left;
-    margin-left: -89px;
+    margin-left: -112px;
     margin-right: -30px;
     color: #1428a0;
 }
@@ -68,12 +69,12 @@ body {
 .page-content>.list-content>.detail-list>hr{
 	width: 70%;
     margin-left: 121px;
-    margin-top: 30px;
+    margin-top: 40px;
     border: 1.2px solid #1428a0;
 }
 
 .page-content>.list-content>.detail-list>.confirm_button {
-	
+	margin-top: 20px;
 }
 .page-content>.list-content>.detail-list>.confirm_button>span:nth-child(1)>a {
 	color: #888;
