--- a/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
@@ -183,7 +183,10 @@ body {
 	color: #1428a0;
 	border-bottom: 2px solid #1428a0;
 }
-
+#GNB>ul>li> .page{
+	color: #1428a0;
+	border-bottom: 2px solid #1428a0;
+}
 #GNB ul ul {
 	transition: background 300ms;
 }
